- bios/ikbd.c include/portab.h: Fixed potential strict aliasing issue. (VRI)

2015-03-15
- bios/lineavars.S vdi/vdi_control.c vdi/vdi_defs.h: Make lineA variable
  CUR_WORK point to virtual workstation structure (TOS compatibility). (RFB)
- vdi/vdi_text.c: Code cleanup: create routine to setup common values
  returned by vst_height()/vst_point(). (RFB)
- desk/desktop.def desk/desktop.rsc: Change text of button in the move/copy
  name conflict dialog from 'Cancel' to more accurate 'Skip'. (RFB)

2015-03-19
- bios/processor.S include/asmdefs.h: Code cleanup: convert assembler
  instructions-defined-as-constants to macros. (RFB)

2015-03-20
- bios/processor.S: Fix FPU detection: 68881/68882 are now differentiated
  correctly. (RFB)

2015-03-21
- bios/coldfire.c bios/delay.c include/config.h: Fix delay_loop() timing
  for M548X machines. (RFB)
- bios/bios.c bios/blkdev.c bios/blkdev.h bios/initinfo.c bios/initinfo.h:
  Allow user to specify boot partition at startup. (RFB)

2015-03-23
- bios/blkdev.h bios/initinfo.c: Don't display hard disk bypass message if
  no hard disk. (RFB)
- bios/initinfo.c: Clear screen after initinfo() display. (RFB)

2015-03-24
- bios/bios.c: Fix regression: AUTO-folder programs & ACCs were not run
  on a floppy-only system. (RFB)

2015-03-26
- bios/bios.c bios/blkdev.c bios/blkdev.h bios/floppy.c bios/floppy.h:
  Run hard disk boot sector code (disabled by default). (RFB)
- doc/bugs.txt: Updated to reflect recent bug fixes.  Contributed by Eero
  Tamminen. (RFB)
- bios/lineavars.S: Updated comments.  Contributed by Eero Tamminen. (RFB)
- vdi/vdi_line.c: Ignore lineA variable 'multifill' for linea_rect() and
  linea_polygon().  Contributed by Eero Tamminen. (RFB)
  
2015-03-27
- vdi/vdi_fill.c: Code cleanup, better comments.  Contributed by Eero
  Tamminen. (RFB)

2015-03-28
- aes/gemrslib.c: Reverted recent update, since it prevented a valid action
  (loading new-format RSC file but not subsequently accessing CICONs). (RFB)