@@ -6117,3 +6117,5 @@ Start... early ages
 2015-03-28
 - aes/gemrslib.c: Reverted recent update, since it prevented a valid action
   (loading new-format RSC file but not subsequently accessing CICONs). (RFB)
+- aes/gemfmalt.c: Cosmetic improvement: increased button spacing in alerts.
+  Contributed by Eero Tamminen. (RFB)
